--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,3 @@
 <h1>New Tasks</h1>
 
-<%= simple_form_for @task do |f| %>
-  <%= f.input :name %>
-  <%= f.input :password %>
-  <%= f.button :submit %>
-<% end %>
+<%= render 'form' %>
