before bootshatf and stuuf

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -18,13 +18,8 @@
   <%= f.input :title, label: 'Titul' %>
   <%= f.input :note, label: 'Poznámka' %>
   <%= f.input :is_done, as: :boolean, label: 'Hotovo' %>
-  <%= f.association :tag, collection: Tag.where(user_id: current_user.id), selected: f.object.tag_ids, :include_blank => true, label: 'Tag' %>
-  <%= f.association :category, collection: current_user.categories, selected: f.object.category_id, :include_blank => true, label: 'Kategorie' %>
-
-
-  <%= fields_for(@task_tags_association) do |tta|%>
-    <%= collection_check_boxes(:tags, :id, @all_tags, :id, :title, {}, {:multiple => true}) %>
-    <% end %>
+  <%= f.association :tags, collection: current_user.tags, as: :check_boxes %>
+  <%= f.association :category, collection: current_user.categories, selected: f.object.category_id, label: 'Kategorie' %>
 
   <%= f.button :submit, 'Potvrdit' %>
 <% end %>
