--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Upravit categiry</h1>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item"><a href="<%= categories_path %>">Categories</a></li>
+    <li class="breadcrumb-item">Category Edit</li>
+  </ol>
+</nav>
+<h1>Upravit category</h1>
 <%= render 'form' %>
