--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <%= f.input :title, label: 'Titul' %>
-  <%= f.input :color, label: 'barva' %>
+  <%= color_field(:tag, :color)%>
 
 
   <%= f.button :submit, 'Potvrdit' %>
