--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,2 +1,9 @@
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item"><a href="<%= tags_path %>">Tags</a></li>
+    <li class="breadcrumb-item">Tag Edit</li>
+  </ol>
+</nav>
 <h1>Upravit tag</h1>
 <%= render 'form' %>
