--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Upravit úkolu</h1>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item"><a href="<%= tasks_path %>">Tasks</a></li>
+    <li class="breadcrumb-item">Edit Task</li>
+  </ol>
+</nav>
+<h1>Edit Task</h1>
 <%= render 'form' %>
