--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Tasks controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+@import "bootstrap";
+
+.tasks_container {
+  border: 2px solid red;
+  margin: 25px;
+}
