--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,19 +1,33 @@
-<h1>Categories#index</h1>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item">Categories</li>
+  </ol>
+</nav>
+<h1>Categories</h1>
+<table class="table_class">
 
-<%= link_to 'Add new', new_category_path %>
-<%= link_to 'To Tasks', tasks_path %>
-<table>
   <tr>
+    <button onclick= "window.location.href='<%= new_category_path %>';" type="submit" class="btn btn-primary">
+      Add New</button>
+    <th>ID</th>
     <th>Title</th>
-    <th>Color</th>
-    <th></th>
+    <th>Color(RGB)</th>
+    <th>Create at</th>
+    <th>Updated at</th>
+    <th>Number of tasks</th>
   </tr>
-
   <% @categories.each do |category| %>
     <tr>
+      <td><%= category.id %></td>
       <td><%= category.title %></td>
-      <td><%= category.color %>
-      <td><%= link_to 'EDIT',edit_category_path(category) %></td>
+      <td> <span style="background-color:rgb(<%= category.color%>);font-weight:bold">
+        <%= category.color %>  </span></td>
+      <td><%= category.created_at.try(:strftime, ("%m/%d/%Y")) %></td>
+      <td><%= category.updated_at.try(:strftime, ("%m/%d/%Y")) %></td>
+      <td><%= count_tasks(category.id) %> </td>
+      <td><%= link_to 'Show',category_path(category) %></td>
+      <td><%= link_to 'Edit',edit_category_path(category) %></td>
       <td><%= link_to 'Smazat', category_path(category),
                       method: :delete,
                       data: {confirm: 'Opravdu chcete smazat?'} %></td>
