--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,27 +1,35 @@
-<h1>Tags#index</h1>
-
-<%= link_to 'Add new', new_tag_path %>
-<%= link_to 'To Tasks', tasks_path %>
-<%if !@tags.empty? %>
-<table>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item">Tags</li>
+  </ol>
+</nav>
+<h1>Tags</h1>
+<table class="table_class">
   <tr>
+    <button onclick= "window.location.href='<%= new_tag_path %>';" type="submit" class="btn btn-primary">
+      Add New</button>
+    <th>ID</th>
     <th>Title</th>
-    <th>Color</th>
-    <th></th>
+    <th>Color(RGB)</th>
+    <th>Create at</th>
+    <th>Updated at</th>
+    <th>Number of tasks</th>
   </tr>
-
   <% @tags.each do |tag| %>
-
     <tr>
+      <td><%= tag.id %></td>
       <td><%= tag.title %></td>
-      <td><%= tag.color %>
-      <td><%= link_to 'EDIT',edit_tag_path(tag) %></td>
+      <td> <span style="background-color:rgb(<%= tag.color%>);font-weight:bold">
+        <%= tag.color %>   </span></td>
+      <td><%= tag.created_at.try(:strftime, ("%m/%d/%Y")) %></td>
+      <td><%= tag.updated_at.try(:strftime, ("%m/%d/%Y")) %></td>
+      <td><%= count_tasks(tag.id) %> </td>
+      <td><%= link_to 'Show',tag_path(tag) %></td>
+      <td><%= link_to 'Edit',edit_tag_path(tag) %></td>
       <td><%= link_to 'Smazat', tag_path(tag),
                       method: :delete,
                       data: {confirm: 'Opravdu chcete smazat?'} %></td>
     </tr>
   <% end %>
-  <%else %>
-  <p> No tags </p>
-  <%end %>
 </table>
