--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,10 @@
-<h1>New Tasks</h1>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item"><a href="<%= tasks_path %>">Tasks</a></li>
+    <li class="breadcrumb-item">New task</li>
+  </ol>
+</nav>
+<h1>New task</h1>
 
 <%= render 'form' %>
