--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,12 @@
-<h1> Detail úkolu </h1>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="<%= main_pages_index_path %>">Main Page</a></li>
+    <li class="breadcrumb-item"><a href="<%= tasks_path %>">Tasks</a></li>
+    <li class="breadcrumb-item">Task detail</li>
+  </ol>
+</nav>
+<h1> Task detail </h1>
 
-<%= link_to 'INDEX',  tasks_index_path %>
 <p>
   <strong>Deadline:</strong>
   <%= @task.deadline_at %>
