--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -18,8 +18,8 @@
   <%= f.input :title, label: 'Titul' %>
   <%= f.input :note, label: 'Poznámka' %>
   <%= f.input :is_done, as: :boolean, label: 'Hotovo' %>
-  <%= f.association :tags, collection: current_user.tags, as: :check_boxes %>
-  <%= f.association :category, collection: current_user.categories, selected: f.object.category_id, label: 'Kategorie', :include_blank => true %>
+  <%= f.association :tags, collection: current_user.tags, as: :check_boxes,label: 'Tags' %>
+  <%= f.association :category, collection: current_user.categories, selected: f.object.category_id, label: 'Categories', :include_blank => true %>
 
   <%= f.button :submit, 'Potvrdit' %>
 <% end %>
