--- a/app/views/main_pages/index.html.erb
+++ b/app/views/main_pages/index.html.erb
@@ -10,12 +10,13 @@
 </nav>
 </div>
 <div class="sidenav">
-  <button class="dropdown-btn">Můj účet
+  <button class="dropdown-btn">My account
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-container">
-    <a <%= link_to 'Odhlásit se', destroy_user_session_path, method: :delete %></a>
-    <a <%= link_to 'Upravit přihlašovací údaje a smazat účet', edit_user_registration_path %></a>
+    <a <%= link_to 'Log Out', destroy_user_session_path, method: :delete %></a>
+    <a <%= link_to 'Edit or Delete user account', edit_user_registration_path %></a>
+
   </div>
 
   <button class="dropdown-btn">Nastavení
